css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* UTILITIES */

.flex-container{
    display: flex;
}

.flex-wrap{
    flex-wrap: wrap;
}

.flex-center{
    align-items: center;
    justify-content: center;
}

.p-relative{
    position: relative;
}

/* Principal parts */
header{
    width: 220px;
    background-color: black;
}

main{
    width: calc(100% - 220px);
    background-color: #141922;
    overflow-y: auto;
    padding-bottom: 10rem;
}

footer{
    height: 100px;
    width: 100%;
    background-color: #282828;
    position: fixed;
    bottom: 0;
}

ul{
    list-style-type: none;
}

li{
    display: inline-block;
}

/* HEADER PART */

/* MAIN PART */
/* Upper main sections */
.upgrade{
    width: 100%;
    height: 100px;
    background-color: #080b12;
}

.categories{
    width: 100%;
    padding: 1rem 0;
    color: #7a7c82;
    text-transform: uppercase;
    background-color: rgb(192, 191, 191);
}

.categories ul{
    border: 1px solid blue;
}

.categories li{
    margin: 0 1.5rem 1.5rem;
    border: 1px solid magenta;
}

/* Music discs sections */
.music-part{
    padding: 0 1.2rem;
}

.row-discs{
    width: 100%;
    background-color: rgb(247, 207, 134);
}

/* Recently */
.recently-music{
    width: 100%;
    background-color: rgb(175, 248, 224);
}

.recently-music .disc-box{
    height: 250px;
    width: 215px;
    margin: 1.5rem 2rem 3rem 1rem;
    background-color: rgb(250, 94, 94);
}

/* For you */
.your-music,
.popolar-artists{
    width: calc(100% / 3);
    background-color: rgb(162, 255, 162);
}

.your-music .disc-box{
    height: 250px;
    width: 215px;
    margin: 1.5rem 2rem 3rem 1rem;
    background-color: rgb(250, 94, 94);
}

/* Artists */
.popolar-artists .disc-box{
    height: 250px;
    width: 215px;
    margin: 1.5rem 2rem 3rem 1rem;
    background-color: rgb(250, 94, 94);
}

/* RESPONSIVE */

/* Medium view */
@media screen and (max-width: 768px) {
    .recently-music .disc-box,
    .your-music .disc-box,
    .popolar-artists .disc-box{
        height: 150px;
        width: 115px;
        margin: 1.5rem 0.2rem 3rem;
        background-color: rgb(250, 94, 94);
    }

    .your-music,
    .popolar-artists{
        width: 50%;
    }
}

/* Small view */
@media screen and (max-width: 576px) {
    .recently-music .disc-box,
    .your-music .disc-box,
    .popolar-artists .disc-box{
        height: 160px;
        width: 135px;
        margin: 1.5rem 0.2rem 3rem;
        background-color: rgb(250, 94, 94);
    }

    .your-music,
    .popolar-artists{
        width: 100%;
    }
}

/* Extra-small view */
@media screen and (max-width: 480px) {
    header{
        width: 50px;
    }
    
    main{
        width: calc(100% - 50px);
    }

    .recently-music .disc-box,
    .your-music .disc-box,
    .popolar-artists .disc-box{
        height: 180px;
        width: 160px;
        margin: 1.5rem 0.2rem 3rem;
        background-color: rgb(250, 94, 94);
    }

    .your-music,
    .popolar-artists{
        width: 100%;
    }
}

